# moving_average

./: CMakeLists.txt  Makefile  Perfomanсe.xlsx  README.md  main
result_file/: 0_output.txt  2_output.txt  4_output.txt  5_input.txt  time
src/: MovingAverageFilter.cpp  moving_average_filter.h
src/header/: MovingAverageFilter.h
test/: TestMovingAverageFilter.cpp
tmp/: CMakeCache.txt
